--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Build it Bigger</string>
-    <string name="instructions">Press the button for a delicious joke!</string>
-    <string name="button_text">Tell Joke</string>
+    <string name="instructions">Hey! Welcome to Joker101! :,D\nLet us try to get a joke from it.</string>
+    <string name="button_text">Toss me a joke!</string>
     <string name="action_settings">Settings</string>
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
